# market-insight

./: .gitignore  DATABASE_SCHEMA.md  DEPLOYMENT_MANUAL.md  IMPLEMENTATION_PROGRESS.md  MIGRATION_TO_POSTGRESQL.md  NAVER_REPORT_COLLECTOR_IMPLEMENTATION.md  README.md  SEQUENCE_DIAGRAMS.md  SETUP_GUIDE.md  SPRINT2_IMPLEMENTATION_SUMMARY.md  SPRINT3_IMPLEMENTATION_SUMMARY.md  SPRINT4_IMPLEMENTATION_SUMMARY.md  SPRINT5_IMPLEMENTATION_SUMMARY.md  WEBSOCKET_AND_NOTIFICATIONS.md  docker-compose.yml
backend/: .env.example  pyproject.toml  test_naver_reports.py  test_sprint1.py  test_sprint2.py  test_sprint3.py  test_sprint4.py  test_sprint5.py
backend/analyzer/: assumption_extractor.py  context_gatherer.py  enhanced_report_builder.py  llm_router.py  notifications.py  parent_child_indexer.py  report_builder.py  temporal_decomposer.py  weighted_search.py
backend/api/: main.py
backend/api/routes/: assumptions.py  content.py  enhanced_reports.py  naver_reports.py  portfolio.py  reports.py  (+5 more)
backend/collector/: dart_filing_collector.py  earnings_call_collector.py  naver_blog_collector.py  naver_report_collector.py  stock_tracker.py  thought_logger.py  youtube_collector.py
backend/config/: prompts.yaml  sources.yaml  watchlist.yaml
backend/interface/: cli.py  telegram_bot.py
backend/mcp_servers/: README.md
backend/migrations/: add_investment_assumptions_table.py  add_price_attributions_table.py  add_primary_sources_table.py  add_report_chunks_table.py
backend/scheduler/: assumption_validator.py  daily_jobs.py
backend/storage/: db.py  models.py  vector_store.py
(+365 files in other folders)
