[project]
name = "market-insight"
version = "0.1.0"
description = "Personal Investment Intelligence System"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.0",
    "apscheduler>=3.10.4",
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12.3",
    "anthropic>=0.39.0",
    "pydantic-settings>=2.6.0",
    "rich>=13.9.2",
    "ollama>=0.4.0",
    "schedule>=1.2.2",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0.2",
    "click>=8.1.7",
    "watchdog>=5.0.0",
    "websockets>=13.0",
    "aiosmtplib>=3.0.0",
]

# MCP (Model Context Protocol) for Claude Desktop integration
mcp = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.8.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

# Optional dependencies for planned features
telegram = [
    "python-telegram-bot>=21.0",
]

[project.scripts]
inv = "interface.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
